# neural-net-rs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: lib.rs
src/matrix/: mod.rs
src/neural_net/: mod.rs
test/: index.html
